--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,18 @@
 		</dependency>
 	</dependencies>
 
-	<build>
+	<build>	
+	
+		<resources>
+	      		<resource>
+	      	        	<directory>src/main/resources</directory>
+	      		</resource>
+	      		
+	      		<resource>
+	        		<directory>src/main/webapp</directory>
+	      		</resource>	      
+   		 </resources>
+   		 
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
