Added h2 console related properties and also SSL properties to enable HTTPS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2console/
+
+server.port: 8443
+server.ssl.key-store: classpath:keystore.p12
+server.ssl.key-store-password: changeit
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: tomcat
+
+debug:true
